# pixelsort

./: Cargo.toml  Readme.md
.cargo/: config.toml
src/: main.rs  old_sorting.rs  sorting.rs  ui.rs
