[package]
name = "nannouvis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
nannou = { version = "0.18.1", features = ["spirv"] }
nannou_egui = "0.5.0"
num-traits = "0.2.15"
rayon = "1.5.3"

[profile.release]
debug = 1
