[package]
name = "pixelsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1" }
itertools = "0.10.3"
num-traits = "0.2.15"
rayon = "1.5.3"
bevy_egui = "0.16"
bevy_pancam = "0.5.0"
strum = "0.24"
strum_macros = "0.24"

# dynamic feature default
[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic", "bevy/jpeg", "bevy/bmp", "bevy/tga"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
strip = true
debug = 1
