[package]
name = "pixelsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1" }
itertools = "0.10.3"
num-traits = "0.2.15"
rayon = "1.5.3"
bevy_egui = "0.16"
bevy_pancam = { version = "0.6.1", features = ["bevy_egui"] }
bevy_web_asset = "0.4.0"
bevy_asset_loader = { version = "0.12.1", features = [
    "2d",
    "dynamic_assets",
    "stageless",
    "progress_tracking",
    "progress_tracking_stageless",
] }
iyes_progress = "0.5"
iyes_loopless = "0.7"
strum = "0.24"
strum_macros = "0.24"
enable-ansi-support = "0.1.2"

# dynamic feature default
[features]
default = ["formats"]
fast-compile = ["bevy/dynamic", "formats"]
formats = ["bevy/jpeg", "bevy/bmp", "bevy/tga"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
strip = true
debug = 1
